fixed scrollbar issue on fly-away

--- a/assets/src/scss/flip.scss
+++ b/assets/src/scss/flip.scss
@@ -88,9 +88,11 @@ body {
 
 #container {
     position: relative;
-    display: inline-block;
+    display: block;
     margin: 50px 0;
+    width: 100%;
     text-align: center;
+    overflow: hidden;
 }
 
 // wraps #game-board and #player
